--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,9 @@ astor==0.7.1
 attrs==19.1.0
 backcall==0.1.0
 bleach==3.1.0
+certifi==2019.3.9
+chardet==3.0.4
+Click==7.0
 cycler==0.10.0
 decorator==4.4.0
 defusedxml==0.5.0
@@ -10,6 +13,7 @@ entrypoints==0.3
 gast==0.2.2
 grpcio==1.19.0
 h5py==2.9.0
+idna==2.8
 ipykernel==5.1.0
 ipython==7.4.0
 ipython-genutils==0.2.0
@@ -18,6 +22,8 @@ Jinja2==2.10.1
 jsonschema==3.0.1
 jupyter-client==5.2.4
 jupyter-core==4.4.0
+jupyterlab==0.35.4
+jupyterlab-server==0.2.0
 Keras-Applications==1.0.7
 Keras-Preprocessing==1.0.9
 kiwisolver==1.0.1
@@ -30,6 +36,7 @@ nbconvert==5.4.1
 nbformat==4.4.0
 notebook==5.7.8
 numpy==1.16.2
+oauthlib==3.0.1
 pandas==0.24.2
 pandocfilters==1.4.2
 parso==0.3.4
@@ -48,6 +55,8 @@ python-dateutil==2.8.0
 pytz==2018.9
 PyYAML==5.1
 pyzmq==18.0.1
+requests==2.21.0
+requests-oauthlib==1.2.0
 scikit-learn==0.20.3
 scipy==1.2.1
 Send2Trash==1.5.0
@@ -60,6 +69,7 @@ testpath==0.4.2
 torch==1.0.1.post2
 tornado==6.0.2
 traitlets==4.3.2
+urllib3==1.24.2
 wcwidth==0.1.7
 webencodings==0.5.1
 Werkzeug==0.15.2
